# cancerbayes_irisrf_ex_fastapi_react

./: .env.template  README.md  api_src_ml_prod.ipynb  app.db  backend_api_login_iris_cancer_exs.ipynb  backend_api_login_iris_cancer_exs_redis copy.ipynb  backend_api_login_iris_cancer_exs_redis.ipynb  backend_api_postworking_fixed_clitested copy.ipynb  backend_api_postworking_fixed_clitested.ipynb  backend_api_postworking_fixed_clitested_mladjustments.ipynb  env.template  frontend_web_login_iris_cancer_exs.ipynb  frontend_web_login_iris_cancer_exs_redis copy.ipynb  frontend_web_login_iris_cancer_exs_redis.ipynb  frontend_web_postworking_fixed_clitested copy.ipynb  frontend_web_postworking_fixed_clitested.ipynb  package.json  pyproject.toml  railway steps_writtenout.txt  test.env
.devcontainer/: .env.template  Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
api/: config.yaml  env.template  pyproject.toml  start.sh
api/app/: db.py  main.py  security.py
api/app/core/: config.py
api/app/middleware/: concurrency.py
api/app/ml/: __init__.py  builtin_trainers.py  utils.py
api/app/schemas/: train.py
api/app/services/ml/: model_service.py
api/scripts/: ensure_models.py  env-switch.mjs
api/tests/: monitor_redis.py  test_protection_systems_fixed.py
scripts/: config-to-env.mjs
tests/: configure_gpu_environment.py  test_bayesian_trainer.py  test_endpoints.py  test_import.py  test_manual.py  test_mlflow.py  test_model_status.py  test_self_healing.py  tune_bayesian_parameters.py
web/: package-lock.json  package.json  vite.config.ts
(+20 files in other folders)
