[project]
name = "api"
version = "1.0.0"
description = "FastAPI backend with React frontend"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.2",
    "bcrypt==4.0.1",  # Pin bcrypt version to resolve warning
    # Rate limiting
    "fastapi-limiter>=0.1.5",
    "aioredis>=2.0.0",
    "httpx>=0.24.0",
    # ML dependencies
    "mlflow>=2.8.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pymc>=5.7.0",
    "arviz>=0.15.0",
    "requests>=2.31.0",
    "jax[cpu]>=0.5.3,<0.7",
    "jaxlib>=0.5.3,<0.7",
    "numpyro>=0.14.1,<0.16"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]





